# generalist-vla-agent

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/: pull_request_template.md
configs/: base.yaml  calvin.yaml  calvin_prepare.yaml  calvin_prepare_small.yaml  data_prepare.yaml  demo_release.yaml  eval_temporal_calvin_debug.yaml  eval_temporal_calvin_small.yaml  eval_temporal_calvin_small_calibrated.yaml  eval_temporal_calvin_small_off.yaml  eval_temporal_calvin_small_strict.yaml  eval_temporal_calvin_small_weak.yaml  eval_temporal_from_split.yaml  eval_trained.yaml  infer.yaml  infer_openvla_mock.yaml  infer_temporal.yaml  infer_trained.yaml  train.yaml  train_temporal.yaml  train_temporal_calvin_debug.yaml  train_temporal_calvin_small.yaml  train_temporal_from_split.yaml  validate_dataset.yaml  visualize.yaml
docs/: architecture.md  calvin_download.md  calvin_integration.md  config_lock.md  data_pipeline.md  github_issue_automation.md  github_issue_seeds.md  github_metadata.md  roadmap.md  visualization.md
scripts/: build_benchmark_table.py  check_calvin_download.py  common.py  compare_config_profile.py  compare_eval_reports.py  create_github_issues.py  download_calvin.py  eval.py  infer.py  lock_config_profile.py  migrate_eval_intent_hint_mode.py  prepare_calvin_dataset.py  prepare_data.py  restore_config_profile.py  run_demo_release.py  run_intent_hint_ablation.py  train.py  validate_dataset.py  visualize_results.py
tests/: test_action_calibrator.py  test_config_profile.py  test_data_split.py  test_dataset_schema.py  (+9 more)
(+39 files in other folders)
